# al-call-hierarchy

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LSP.md  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.claude/commands/: triage-wave.md
.config/: nextest.toml
.github/workflows/: build-and-deploy.yml  ci.yml  release.yml
.superpowers/sdd/: t0-task-5-report.md  t3-baseline.md
benches/: engine_stages.rs  lsp_pipeline.rs  telemetry_hot_path.rs
crates/al-syntax/: Cargo.toml  build.rs
crates/al-syntax/src/: casing.rs  language.rs  lib.rs  parse.rs  symbol_props.rs
crates/al-syntax/src/ir/: decl.rs  expr.rs  mod.rs  stmt.rs
crates/al-syntax/src/lower/: mod.rs
crates/al-syntax/src/raw/: mod.rs  node.rs
crates/al-syntax/src/schema/: kind_policy.rs  mod.rs
crates/xtask/: Cargo.toml
docs/: 2026-07-16-scanner-validation-and-bcquality-candidates.md  OUTSTANDING.md  detector-audit.md  engine-gaps.md  engine-migration.md  perf-regression-t3-vs-0.9.3.md  telemetry-ingestion-spike.md  telemetry-smoke-test.md  telemetry.md  v2-migration-guide.md
docs/history/: engine-gaps.md  engine-migration.md
scripts/: cdo-gate  check-goldens  peak_rss.py
scripts/git-hooks/: pre-commit
src/: analysis.rs  app_package.rs  big_stack.rs  capped_io.rs  config.rs  dependencies.rs  dual_run_support.rs  graph.rs  handlers.rs  indexer.rs  language.rs  lib.rs  main.rs  parser.rs  protocol.rs  resolver.rs  server.rs  stage_probe.rs  types.rs  watcher.rs
src/engine/: ids.rs  mod.rs  perf_trace.rs  return_summary.rs  root_classification.rs  snapshot.rs
src/lsp/: custom.rs  def_surface.rs  diagnostics.rs  encoding.rs  handlers.rs  lens.rs  mod.rs  snapshot.rs  updater.rs
src/program/: abi_ingest.rs  build.rs  graph.rs  graphify_export.rs  integration_report.rs  l3_mint.rs  mod.rs  node.rs  node_extract.rs  sig_fp.rs  topology.rs
src/snapshot/: cache.rs  compilation.rs  embedded.rs  identity.rs  mod.rs  parse.rs  provider.rs  snapshot.rs  verify.rs
src/telemetry/: consent.rs  counters.rs  dedup.rs  events.rs  events_attrs.rs  exporter.rs  hash.rs  install_id.rs  mod.rs  pipeline.rs  runtime.rs  session_marker.rs  status.rs
tests/: al2dump_smoke.rs  aldump_smoke.rs  cli_a_html_differential.rs  cli_a_json_differential.rs  cli_a_stats_differential.rs  cli_a_terminal_differential.rs  cli_a_with_evidence.rs  cli_b_diff_differential.rs  cli_b_digest_differential.rs  cli_b_fingerprint_differential.rs  cli_b_fingerprint_oracles.rs  cli_b_prove_differential.rs  cli_b_snapshot_differential.rs  cli_c_cache_differential.rs  cli_c_events_differential.rs  cli_c_policy_differential.rs  cli_p1_enclosing_member.rs  cli_p1_inventory.rs  cross_app_l3_aldump_cli.rs  cross_app_l3_smoke.rs  differential.rs  encoder_vectors.rs  gap_audit_b_table_triggers.rs  gap_audit_d20_break.rs  gap_audit_d22_implicit_rec.rs  gap_audit_d29_run_trigger.rs  gap_audit_d2_guards.rs  gap_audit_d4.rs  gap_g10_load_wrappers.rs  gap_g11_d20_position.rs  gap_g12_d3_refinements.rs  gap_g18_transitive_loop.rs  gap_g19_temp_param.rs  gap_g1_next_terminator.rs  gap_g2_runtime_temp.rs  gap_g4_transitive_wording.rs  gap_g5_wrong_table_name.rs  gap_g6_virtual_tables.rs  gap_g7_dead_routine.rs  gap_g8_residual_temp.rs  (+98 more)
tests/aldump-smoke-goldens/: ws-d2.l3eg.golden.json
tests/cli/: al2dump_smoke.rs  (+23 more)
tests/cli-c-events-goldens/: manifest.json  ws-d12-dead-event.chains.human.txt  ws-d12-dead-event.chains.json  ws-d12-dead-event.fanout.human.txt  ws-d12-dead-event.fanout.json  ws-d8-commit-in-tx.chains.human.txt  ws-d8-commit-in-tx.chains.json  ws-d8-commit-in-tx.fanout.human.txt  ws-d8-commit-in-tx.fanout.json  ws-event-chains.chains.human.txt  ws-event-chains.chains.json  ws-event-chains.fanout.human.txt  ws-event-chains.fanout.json  ws-event-cycle.chains.human.txt  ws-event-cycle.chains.json  ws-event-cycle.fanout.human.txt  ws-event-cycle.fanout.json  ws-event-d45-deep.chains.human.txt  ws-event-d45-deep.chains.json  ws-event-d45-deep.fanout.human.txt  ws-event-d45-deep.fanout.json  ws-event-d45-deep.max-depth-1.chains.human.txt  ws-event-d45-deep.max-depth-1.chains.json  ws-event-fanout.chains.human.txt  ws-event-fanout.chains.json  ws-event-fanout.scope-all.fanout.human.txt  ws-event-fanout.scope-all.fanout.json  ws-event-ishandled.chains.human.txt  ws-event-ishandled.chains.json  ws-event-ishandled.fanout.human.txt  ws-event-ishandled.fanout.json  ws-event-multi-sub-overlap.chains.human.txt  ws-event-multi-sub-overlap.chains.json  ws-event-multi-sub-overlap.fanout.human.txt  ws-event-multi-sub-overlap.fanout.json  ws-event-partial-coverage.chains.human.txt  ws-event-partial-coverage.chains.json  ws-event-partial-coverage.fanout.ignore.human.txt  ws-event-partial-coverage.fanout.ignore.json  ws-event-partial-coverage.fanout.ignore.stderr.txt  (+20 more)
tests/cli-c-policy-goldens/: api-no-interactive-ui.explain.txt  manifest.json  no-commit-in-event-subscribers.explain.txt  notfound.explain.stderr.txt  ws-policy-api-dynamic-dispatch.default.human.txt  ws-policy-api-dynamic-dispatch.default.json  ws-policy-api-dynamic-dispatch.default.sarif  ws-policy-api-isolated-storage.default.human.txt  ws-policy-api-isolated-storage.default.json  ws-policy-api-isolated-storage.default.sarif  ws-policy-api-ledger-write.default.human.txt  ws-policy-api-ledger-write.default.json  ws-policy-api-ledger-write.default.sarif  ws-policy-api-ui.default.human.txt  ws-policy-api-ui.default.json  ws-policy-api-ui.default.sarif  ws-policy-clean.nopolicy.json  ws-policy-commit-in-subscriber.default.human.txt  ws-policy-commit-in-subscriber.default.json  ws-policy-commit-in-subscriber.default.sarif  ws-policy-commit-in-trigger.default.human.txt  ws-policy-commit-in-trigger.default.json  ws-policy-commit-in-trigger.default.sarif  ws-policy-custom.custom.human.txt  ws-policy-custom.custom.json  ws-policy-custom.custom.sarif  ws-policy-install-business-write.default.human.txt  ws-policy-install-business-write.default.json  ws-policy-install-business-write.default.sarif  ws-policy-trigger-http.default.human.txt  (+2 more)
(+3022 files in other folders)
