[package]
name = "al-call-hierarchy"
version = "0.8.0"
edition = "2021"
authors = ["SShadowS"]
description = "Blazing-fast call hierarchy server for AL (Business Central) using tree-sitter"
license = "GPL-3.0"
repository = "https://github.com/SShadowS/al-call-hierarchy"

[dependencies]
# Tree-sitter
tree-sitter = "0.26"
streaming-iterator = "0.1"

# Parallelism
rayon = "1.10"

# LSP
lsp-server = "0.7"
lsp-types = "0.97"

# Data structures
string-interner = "0.17"
smallvec = "1.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing (R0 identity encoders)
sha2 = "0.10"

# File system
walkdir = "2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

# App package parsing
zip = "2"
roxmltree = "0.20"

# Home directory (cross-platform)
dirs = "6"

# Logging
log = "0.4"
env_logger = "0.11"

# URL decoding
percent-encoding = "2"

# Insertion-ordered map (used in format_terminal rollup groups)
indexmap = "2"

# Error handling
anyhow = "1"

# Incremental query framework (L4 incrementality, Phase R3b). PINNED to the
# current stable crates.io release (the new-Salsa `#[salsa::db]` / `#[salsa::input]`
# / `#[salsa::tracked]` / `#[salsa::interned]` API). The interning + cycle-handling
# behavior differs materially across Salsa versions — keep this pinned.
salsa = "=0.27.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Telemetry pipeline (only pulled in when the `telemetry` feature is on).
# Versions pinned to match opentelemetry-application-insights 0.36, which
# depends on opentelemetry/opentelemetry_sdk 0.26 (NOT 0.27 — using 0.27 here
# pulls a second copy of the crate and breaks the trait bounds at the
# global::set_tracer_provider call site). tracing-opentelemetry 0.27 is the
# bridge version that targets opentelemetry 0.26.
blake3 = { version = "1", optional = true }
opentelemetry = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio-current-thread"], optional = true }
opentelemetry-application-insights = { version = "0.36", features = ["reqwest-blocking-client"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }
lru = { version = "0.12", optional = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false, optional = true }

[features]
default = ["telemetry"]
telemetry = [
    "dep:blake3",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-application-insights",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:lru",
    "dep:reqwest",
]
# Exposes a counters-only runtime installer for integration tests so they can
# assert on `record_*` calls without spinning up the real exporter. Implies
# `telemetry`.
test-runtime = ["telemetry"]

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bin]]
name = "telemetry-spike"
path = "tools/telemetry-spike/main.rs"
required-features = ["telemetry"]

# R0 differential-harness producer — emits the object/routine identity subset
# as JSON for the Rust-port parity check. Additive; not part of the LSP surface.
[[bin]]
name = "aldump"
path = "src/bin/aldump.rs"

# The future al-sem production CLI (Rust port). Stage 1: the `analyze` GATE path
# (projection + filters + SARIF) byte-matching the al-sem TS gate goldens. Additive;
# separate from `aldump` and the LSP surface.
[[bin]]
name = "alsem"
path = "src/bin/alsem.rs"

[[bench]]
name = "telemetry_hot_path"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
