[package]
name = "al-call-hierarchy"
default-run = "al-call-hierarchy"
version = "0.9.3"
edition = "2024"
authors = ["SShadowS"]
description = "Blazing-fast call hierarchy server for AL (Business Central) using tree-sitter"
license = "GPL-3.0"
repository = "https://github.com/SShadowS/al-call-hierarchy"

# Owned-syntax-IR migration (Phase 5 — SEALED): `al-syntax` is the ONLY crate that
# compiles + links the tree-sitter grammar. This engine/CLI crate consumes the owned
# IR (`al_syntax::parse`) exclusively and no longer depends on `tree-sitter`.
[workspace]
members = ["crates/al-syntax", "crates/xtask"]

[dependencies]
# The grammar boundary crate (FFI + generated raw layer / lowerer / owned IR).
al-syntax = { path = "crates/al-syntax" }

# Parallelism
rayon = "1.10"

# LSP
lsp-server = "0.7"
lsp-types = "0.97"

# Data structures
string-interner = "0.17"
smallvec = "1.11"
# Perfect-hash intrinsic built-in catalog (call-graph resolution phase 2). The AL
# record + framework built-ins are COMPILER INTRINSICS (not in any .app
# SymbolReference.json), so the catalog is a hand-built, data-driven asset kept
# separate from the .app symbol pool. `macros` enables the compile-time phf_map!/phf_set!.
phf = { version = "0.11", features = ["macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# YAML — policy file loader (cli-c/c2). serde_yaml is the battle-tested, widely
# vendored YAML data format for serde. We deserialize into `serde_yaml::Value`
# (insertion-order Mapping) and walk it manually to reproduce al-sem's OWN
# validation error strings verbatim (the eemeli `yaml` v2 / loadPolicyFromString
# contract). Library-level parse errors are NOT byte-matched (no differential
# feeds malformed YAML).
serde_yaml = "0.9"

# Regex — policy glob compiler (cli-c/c2). The hand-rolled backtracking glob matcher
# was catastrophically exponential (ReDoS) AND stack-overflowed on long inputs. The
# `regex` crate is non-backtracking (linear, no recursion), so a malicious user policy
# glob can never hang or abort the engine. We translate al-sem's `globToRegExp`
# (`new RegExp('^'+escaped+'$','i')`) faithfully (see policy `glob_compile`).
regex = "1"

# Hashing (R0 identity encoders and snapshot content identity)
sha2 = "0.10"
blake3 = { version = "1" }
# Keyed hashing (1B.3b Task 1: domain-separated anonymization of CDO goldens —
# HMAC over sha2, NOT a fixed salt; see src/program/resolve/anon.rs).
hmac = "0.12"

# File system
walkdir = "2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

# App package parsing
zip = "2"
roxmltree = "0.20"

# Home directory (cross-platform)
dirs = "6"

# Logging
log = "0.4"
env_logger = "0.11"

# URL decoding
percent-encoding = "2"

# Insertion-ordered map (used in format_terminal rollup groups + the cli-b CBOR
# encoder's insertion-ordered value model).
indexmap = "2"

# gzip for the cli-b `.cbor.gz` snapshot serializer. zlib-ng (vendored) so the
# DEFLATE stream is byte-stable across hosts and matches Bun's gzip output at
# level 6. The gzip OS header byte is normalized to 0x03 by the serializer.
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }

# Error handling
anyhow = "1"

# Incremental query framework (L4 incrementality, Phase R3b). PINNED to the
# current stable crates.io release (the new-Salsa `#[salsa::db]` / `#[salsa::input]`
# / `#[salsa::tracked]` / `#[salsa::interned]` API). The interning + cycle-handling
# behavior differs materially across Salsa versions — keep this pinned.
salsa = "=0.27.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Telemetry pipeline (only pulled in when the `telemetry` feature is on).
# Versions pinned to match opentelemetry-application-insights 0.36, which
# depends on opentelemetry/opentelemetry_sdk 0.26 (NOT 0.27 — using 0.27 here
# pulls a second copy of the crate and breaks the trait bounds at the
# global::set_tracer_provider call site). tracing-opentelemetry 0.27 is the
# bridge version that targets opentelemetry 0.26.
opentelemetry = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio-current-thread"], optional = true }
opentelemetry-application-insights = { version = "0.36", features = ["reqwest-blocking-client"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }
lru = { version = "0.12", optional = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false, optional = true }

[features]
default = ["telemetry"]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-application-insights",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:lru",
    "dep:reqwest",
]
# Exposes a counters-only runtime installer for integration tests so they can
# assert on `record_*` calls without spinning up the real exporter. Implies
# `telemetry`.
test-runtime = ["telemetry"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
# Dual-run parity harness (owned-syntax-IR migration): integration tests link only
# the crate + dev-deps, so the IR crate + a dir walker are listed here too.
al-syntax = { path = "crates/al-syntax" }
walkdir = "2"

[[bin]]
name = "telemetry-spike"
path = "tools/telemetry-spike/main.rs"
required-features = ["telemetry"]

# R0 differential-harness producer — emits the object/routine identity subset
# as JSON for the Rust-port parity check. Additive; not part of the LSP surface.
[[bin]]
name = "aldump"
path = "src/bin/aldump.rs"

# The future al-sem production CLI (Rust port). Stage 1: the `analyze` GATE path
# (projection + filters + SARIF) byte-matching the al-sem TS gate goldens. Additive;
# separate from `aldump` and the LSP surface.
[[bin]]
name = "alsem"
path = "src/bin/alsem.rs"

# 1B.3b Task 1: DEV-ONLY tool — the LAST sanctioned L3 oracle use. Mints +
# anonymizes the three committed CDO-derived goldens under
# `tests/goldens/semantic-edges/` (`cdo-anon.json` / `cdo-trigger-anon.json` /
# `cdo-event-anon.json`) plus the gitignored local de-anon map. Run with
# `CDO_WS` set; never part of the LSP surface or any release artifact.
[[bin]]
name = "mint-goldens"
path = "src/bin/mint-goldens.rs"

[[bench]]
name = "telemetry_hot_path"
harness = false

# T0.5: the legacy LSP call-hierarchy pipeline (initial index, the 3
# call-hierarchy query handlers, single-file reindex) — the surface
# CLAUDE.md's Performance Targets table describes.
[[bench]]
name = "lsp_pipeline"
harness = false

# T3 (LSP-migration arc) Task 3: program-engine stage split (snapshot / parse
# / build(graph) / ResolveIndex::build / BodyMap::build) over the perf
# corpus — pins the rung-1/rung-2 incremental-updater budgets.
[[bench]]
name = "engine_stages"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
