[package]
name = "al-syntax"
version = "0.1.0"
edition = "2021"
description = "The only crate that knows tree-sitter: AL grammar FFI, generated raw vocabulary/typed CST, the lowerer, and the owned AL syntax IR."
license = "GPL-3.0"

[dependencies]
tree-sitter = "0.26"

[build-dependencies]
cc = "1"
sha2 = "0.10"
